--- a/src/components/Toolbar/ToolbarMenu.module.css
+++ b/src/components/Toolbar/ToolbarMenu.module.css
@@ -2,6 +2,7 @@
    position: absolute;
    top: 100%;
    right: 0;
+   z-index: 1000;
 }
 
 .toolbar__menu {
@@ -16,7 +17,6 @@
    padding: 0.5rem;
    box-shadow: rgba(0, 0, 0, 0.3) 0px 20px 10px -10px;
    flex-direction: column;
-   z-index: 1001;
 }
 
 .toolbar__menu > button {
@@ -37,6 +37,5 @@
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.2);
-   z-index: 1000;
    transition: all 0.15s linear;
 }
